--- a/layout/partial/head.pug
+++ b/layout/partial/head.pug
@@ -5,7 +5,7 @@ title
     block site_title
         = config.title
 block description
-    meta(name="description", content= config.description ? config.description : 'A Blog Powered By Hexo')
+    meta(name="description", content= config.description ? config.description : 'Description here')
 
 meta(name="viewport", content="width=device-width, initial-scale=1")
 link(rel="icon", href=url_for(theme.favicon))
