--- a/source/scss/_partial/base.scss
+++ b/source/scss/_partial/base.scss
@@ -47,8 +47,7 @@ hr {
 code {
     margin: 0 2px;
     padding: 3px 5px;
-    color: #e96900;
-    border-radius: 2px;
+    color: #ffffff;
     white-space: inherit;
 }
 
