--- a/source/scss/_partial/post.scss
+++ b/source/scss/_partial/post.scss
@@ -132,8 +132,10 @@
 code,
 pre {
     font-size: 0.8em;
-    background-color: #f8f8f8;
-    font-family: 'Roboto Mono', Monaco, courier, monospace;
+    background-color: #34495e;
+    border-radius: 2px;
+    font-family: 'Consolas', monaco, monospace;
+    font-weight: 700
 }
 
 .highlight {
@@ -193,7 +195,7 @@ $signs: ("html", "js", "bash", "css", "scss","diff", "java", "xml", "python", "j
 }
 
 pre {
-    color: #525252;
+    color: #ffffff;
     .function .keyword,
     .constant {
        color: #0092db;
