--- a/layout/partial/layout.pug
+++ b/layout/partial/layout.pug
@@ -5,10 +5,12 @@ html(lang=config.language)
     body
         .wrap
             header
-                a.logo-link(href=url_for())
-                    img(src=url_for(theme.logo) alt="logo")
-                    // Title here
-                include nav
+                table.head-table
+                    tr.head-table
+                        td.head-table
+                            include logo
+                        td.head-table
+                            include nav
             main.container
                 block container
             footer
