--- a/source/css/hermes.css
+++ b/source/css/hermes.css
@@ -426,13 +426,27 @@ header {
     float: right;
     left: 80px; }
   header .logo-link img {
-    height: 60px; }
+    height: 60px;
+    vertical-align: middle; }
   header .nav-list-item {
     display: inline-block;
     padding: 19px 10px; }
     header .nav-list-item a {
       font-size: 16px;
       line-height: 1.4; }
+  header .head-table {
+    margin: 0;
+    padding: 0;
+    vertical-align: middle; }
+  header .head-table-img {
+    margin: 0;
+    padding: 0;
+    height: 60px; }
+  header .site-title {
+    margin: 0;
+    padding: 0px 12px;
+    float: left;
+    align-self: center; }
 
 .home.post-list {
   margin: 2em 0; }
@@ -768,7 +782,7 @@ main.container {
     margin: 0 auto; }
 
   header {
-    padding: 20px 100px; } }
+    padding: 20px 50px; } }
 @media screen and (max-width: 700px) {
   .wrap {
     width: 100%; }
