--- a/source/_scss/_partial/base.scss
+++ b/source/_scss/_partial/base.scss
@@ -46,9 +46,11 @@ hr {
 
 code {
     margin: 0 2px;
-    padding: 3px 5px;
-    color: #ffffff;
+    padding: 1px 4px;
+    color: #f8f8f2;
+    border-radius: 0.3em;
     white-space: inherit;
+    background-color: #272822;
 }
 
 iframe, video {
