--- a/source/_scss/_partial/copyright.scss
+++ b/source/_scss/_partial/copyright.scss
@@ -2,15 +2,15 @@ footer {
     padding-bottom: 1px;
     .copyright {
         margin: 4em 0;
-        border-top: 1px solid #ddd;
+        border-top: 1px solid $outline;
         text-align: center;
         p, a {
-            color: #aaa;
+            color: $onBackground;
             font-size: 14px;
             font-weight: 100;
         }
         a:hover {
-            color: #888;
+            color: $onBackground;
         }
     }
 }
