--- a/source/_scss/_partial/base.scss
+++ b/source/_scss/_partial/base.scss
@@ -1,6 +1,6 @@
 ::selection {
-    color: #FFFFFF;
-    background-color: #5454f8;
+    color: $primary;
+    background-color: $inversePrimary;
 }
 
 html, body {
@@ -10,10 +10,10 @@ html, body {
 
 body {
     margin: 0;
-    color: #34495e;
+    color: $onBackground;
     font-size: 18px;
     line-height: 1.6;
-    background-color: #fff;
+    background-color: $background;
     font-family: 'Source Sans Pro', 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
     
 }
@@ -30,14 +30,14 @@ ul {
 }
 
 a, a:active {
-    color: #2c3e50;
+    color: $onBackground;
     text-decoration: none;
 }
 
 a.nav-list-link.active,
 a.nav-list-link:hover,
 a.post-title-link:hover {
-    border-bottom: 2px solid #5454f8;
+    border-bottom: 2px solid $onBackground;
 }
 
 hr {
@@ -47,10 +47,10 @@ hr {
 code {
     margin: 0 2px;
     padding: 1px 4px;
-    color: #f8f8f2;
+    color: $onSurface;
     border-radius: 0.3em;
     white-space: inherit;
-    background-color: #272822;
+    background-color: $surfaceContainer;
 }
 
 iframe, video {
@@ -63,15 +63,16 @@ table {
     width: 100%;
     margin: 1em auto;
     thead {
-        background-color: #ddd;
+        background-color: $surfaceContainerHighest;
         th {
             padding: 5px;
             min-width: 20px;
         }
     }
     tbody {
+        //background-color: $surfaceContainer;
         tr:nth-child(2n) {
-            background-color: #eee;
+            background-color: $surfaceContainerHigh;
         }
         td {
             padding: 5px;
