--- a/source/_scss/_partial/footer.scss
+++ b/source/_scss/_partial/footer.scss
@@ -6,12 +6,12 @@
         margin: 0 4px;
         padding: 4px 12px;
         border-radius: 4px;
-        border-bottom: 4px solid #3aa373;
+        border-bottom: 4px solid $primaryContainer;
         font-size: 14px;
-        color: #fff;
-        background-color: #4fc08d;
+        color: $onPrimaryContainer;
+        background-color: $primaryContainer;
         &:hover {
-            background-color: #22bd77;
+            background-color: $inversePrimary;
         }
     }
 }
