--- a/source/_scss/_partial/home-post-list.scss
+++ b/source/_scss/_partial/home-post-list.scss
@@ -2,7 +2,7 @@
     margin: 2em 0;
     .post-list-item {
         padding: 1em 0 2em;
-        border-bottom: 1px solid #ddd;
+        border-bottom: 1px solid $outline;
         &:last-child {
             border-bottom: 0px;
         }
@@ -18,6 +18,6 @@
         }
     }
     .read-more {     
-        color: #5454f8;
+        color: $primary;
     }
 }
