--- a/source/_scss/hermes.scss
+++ b/source/_scss/hermes.scss
@@ -2,6 +2,7 @@
 
 @import "prism";
 
+@import "_partial/colors";
 @import "_partial/normalize";
 @import "_partial/base";
 @import "_partial/header";
